--- a/app/views/activities/_overview.html.haml
+++ b/app/views/activities/_overview.html.haml
@@ -37,7 +37,13 @@
             %tbody
               - recipe.ingredients.each do |ingredient|
                 %tr
-                  %td= ingredient.title
+                  - if ingredient.product_url.present?
+                    %td
+                      = link_to ingredient.title, ingredient.product_url
+                      - if ingredient.for_sale
+                        %i.icon-shopping-cart
+                  - else
+                    %td= ingredient.title
                   %td.quantity= quantity_number(ingredient.quantity)
                   %td= ingredient.unit
       .span4
