--- a/app/views/activities/_overview.html.haml
+++ b/app/views/activities/_overview.html.haml
@@ -37,11 +37,9 @@
             %tbody
               - recipe.ingredients.each do |ingredient|
                 %tr
-                  - if ingredient.product_url.present?
+                  - if ingredient.product_url?
                     %td
-                      = link_to ingredient.title, ingredient.product_url
-                      - if ingredient.for_sale
-                        %i.icon-shopping-cart
+                      = link_to ingredient.title, ingredient.product_url, { class: ('bullet-for-sale' if ingredient.for_sale) }
                   - else
                     %td= ingredient.title
                   %td.quantity= quantity_number(ingredient.quantity)
@@ -66,7 +64,7 @@
               %ul.equipment
                 - group.each do |item|
                   - if item.product_url?
-                    %li= link_to item.title, item.product_url
+                    %li.bullet-for-sale= link_to item.title, item.product_url
                   - else
                     %li= item.title
         - if activity.optional_equipment.present?
@@ -79,7 +77,7 @@
                 %ul.equipment
                   - group.each do |item|
                     - if item.product_url?
-                      %li= link_to item.title, item.product_url
+                      %li.bullet-for-sale= link_to item.title, item.product_url
                     - else
                       %li= item.title
 
