render title_bar and add follow along link

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -31,7 +31,6 @@ p
   border-top: 1px solid $grayLight
   border-bottom: 1px solid $grayLight
 
-
 .hero-comments
   margin-bottom: 0
   background: $grayLight
@@ -147,6 +146,7 @@ iframe
 @import application/carousel
 @import application/subscribe
 @import application/home
+@import application/title_bar
 @import application/courses/show
 @import application/courses/course_breakdown
 @import application/activities/overview
