--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -129,6 +129,7 @@
 
     #main-container
       = render 'layouts/header'
+      = render 'layouts/title_bar'
       = yield
       -# Footer is diabled for now until after demo
       -#= render 'layouts/footer'
