--- a/app/views/mailing_list/_subscribe.html.haml
+++ b/app/views/mailing_list/_subscribe.html.haml
@@ -1,5 +1,5 @@
 - orange ||= false
-.subscribe{ class: ('orange' if orange)  }
+.subscribe.pull-right{ class: ('orange' if orange)  }
   = form_tag mailing_list_subscribe_path, remote: true do
     .input-append
       = email_field_tag('email', nil, {class: 'span4', placeholder: 'Enter your email for updates', required: true})
