--- a/app/views/layouts/_disqus_comments.html.erb
+++ b/app/views/layouts/_disqus_comments.html.erb
@@ -6,7 +6,7 @@
         <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
         <script type="text/javascript">
-        var disqus_shortname = 'delvestaging';
+        var disqus_shortname = '<%= DISQUS_SHORTNAME %>';
         var disqus_identifier = "<%= id %>";
         <% if Rails.env.development? -%>
         var disqus_developer = 1;
