--- a/app/views/courses/_navigation.html.haml
+++ b/app/views/courses/_navigation.html.haml
@@ -29,6 +29,6 @@
             %a.icon-list-ol.icon-white{href: '#step-by-step'}
               %span.nav-label Step-By-Step
           %li
-            %a.icon-comment{href: '#disqus_thread'}
+            %a.icon-comment{href: '#disqus_thread', data: {'disqus-identifier' => disqus_id}}
               %span.nav-label Comments
 
