rename to disqus_id

--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -20,5 +20,5 @@
 #step-by-step
   = render 'step_by_step', activity: activity
 
-= render 'layouts/disqus_comments', id: disqus_id
+= render 'layouts/disqus_comments', disqus_id: disqus_id
 
