--- a/app/views/layouts/_disqus_comments.html.erb
+++ b/app/views/layouts/_disqus_comments.html.erb
@@ -7,7 +7,7 @@
 
         <script type="text/javascript">
         var disqus_shortname = '<%= DISQUS_SHORTNAME %>';
-        var disqus_identifier = "<%= id %>";
+        var disqus_identifier = "<%= disqus_id %>";
         <% if Rails.env.development? -%>
         var disqus_developer = 1;
         <% end -%>
