update blog link

--- a/app/views/layouts/_title_bar.html.haml
+++ b/app/views/layouts/_title_bar.html.haml
@@ -2,5 +2,5 @@
   .span12
     - unless current_page?('/')
       = render 'mailing_list/subscribe', orange: true
-    %a.pull-right{href: 'http://www.delvekitchen.com/blog/'} Follow along on our blog
+    %a.pull-right{href: 'http://chefstepsblog.com'} Follow along on our blog
 
