--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -17,49 +17,7 @@
 
   .row.course-info
     .span8
-      %h1 Description
-      %p
-        Sous vide cooking is at the core of modernist cooking. Once used in
-        only the most forward-thinking restaurants, sous vide cooking is
-        rapidly being adopted as a mainstream cooking technique in both homes
-        and restaurants around the world. Through lectures and step-by-step
-        demonstrations you will master this highly flexible way to cook
-        virtually any food.
-
-      %p
-        The course will:
-
-      %ol.text
-        %li
-          Get you started with the basics of sous vide cooking and then quickly
-          have you using intermediate and advanced sous vide techniques.
-
-        %li
-          Develop your intuition for one of the most fundamental ingredients of
-          all cooking: heat.
-
-        %li
-          Understand the relationship between cooking temperature and time so
-          that you get the results you want every time.
-
-        %li
-          Explore different strategies for cooking animal and plant foods so
-          that you can cook anything sous vide with confidence.
-
-        %li
-          Learn to adapt traditional recipes you love to sous vide cooking
-          methods for greater convenience and consistency.
-
-        %li
-          Use your sous vide equipment in ways that unlock your creativity in
-          the kitchen.
-
-        %li
-          Learn the relevant health and food safety issues for sous vide cooking so that you can prepare healthier food and reduces the chance of food borne illness.
-
-      %p
-        No other course matches our comprehensive approach to understanding sous vide cooking.
-
+      !=course_description.copy.to_s
     .span4.pull-right
       = render 'course_breakdown', copy: syllabus_copy
     .span8.pull-left
