--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -28,18 +28,7 @@
             .span2
               = image_tag('chris-large.jpg', title: 'Chris Young', class: 'img-profile')
             .span6
-              %h4 Chris Young
-              %p
-                :erb
-                  Chris is the principal coauthor of the acclaimed six-volume work
-                  <em>Modernist Cuisine: The Art and Science of Cooking</em>, which was named
-                  both the 2012 Cookbook of the Year and Best Professional Cookbook
-                  of the year by the James Beard Foundation and has been a worldwide
-                  best seller. Chris was also the founding chef of Heston
-                  Blumenthal’s Fat Duck Experimental Kitchen, the secret culinary
-                  laboratory behind the innovative dishes served at one of the best
-                  restaurants in the world. Prior to becoming a chef, he completed
-                  degrees in theoretical mathematics and biochemistry.
+              != bio_chris.copy.to_s
           .row
             .span8.horizontal-divider
         %li.instructor
@@ -47,14 +36,7 @@
             .span2
               = image_tag('grant-large.jpg', title: 'Chris Young', class: 'img-profile')
             .span6
-              %h4 Grant Crilly
-              %p
-                Grant was the first development chef hired by the Modernist
-                Cuisine team. Prior to this he was chef de cuisine at Busaba in
-                Mumbai and Mistral in Seattle, and served as head development chef
-                at Delicious Planet. He has cooked for Pascal Barbot at
-                L’Astrance, worked with Pierré Herme’s team at Grégoire-Ferrandi,
-                and practiced butchery at Bajon Jean Pierrie in Paris.
+              != bio_grant.copy.to_s
           .row
             .span8.horizontal-divider
 
