--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -17,7 +17,8 @@
 
   .row.course-info
     .span8
-      !=course_description.copy.to_s
+      :markdown
+        #{course_description.copy.to_s}
     .span4.pull-right
       = render 'course_breakdown', copy: syllabus_copy
     .span8.pull-left
@@ -28,7 +29,8 @@
             .span2
               = image_tag('chris-large.jpg', title: 'Chris Young', class: 'img-profile')
             .span6
-              != bio_chris.copy.to_s
+              :markdown
+                #{bio_chris.copy.to_s}
           .row
             .span8.horizontal-divider
         %li.instructor
@@ -36,7 +38,8 @@
             .span2
               = image_tag('grant-large.jpg', title: 'Chris Young', class: 'img-profile')
             .span6
-              != bio_grant.copy.to_s
+              :markdown
+                #{bio_grant.copy.to_s}
           .row
             .span8.horizontal-divider
 
