--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -32,7 +32,8 @@
 .container
   .row
     .intro.span7
-      != homepage_blurb.copy.to_s
+      :markdown
+        #{ homepage_blurb.copy.to_s}
 
     .creators.span5
       %h3 From creators of Modernist Cuisine
@@ -42,7 +43,8 @@
             .span1
               = image_tag('chris.jpg', title: 'Chris Young', class: 'img-profile')
             .span3
-              != bio_chris.copy.to_s
+              :markdown
+                #{bio_chris.copy.to_s}
           .row
             .span4.horizontal-divider
 
@@ -51,7 +53,8 @@
             .span1
               = image_tag('grant.jpg', title: 'Grant Crilly', class: 'img-profile')
             .span3
-              != bio_grant.copy.to_s
+              :markdown
+                #{bio_grant.copy.to_s}
           .row
             .span4.horizontal-divider
 
@@ -60,7 +63,8 @@
             .span1
               = image_tag('ryan.jpg', title: 'Ryan Matthew Smith', class: 'img-profile')
             .span3
-              != bio_ryan.copy.to_s
+              :markdown
+                #{bio_ryan.copy.to_s}
           .row
             .span4.horizontal-divider
 
