--- a/app/assets/stylesheets/application/_carousel.css.sass
+++ b/app/assets/stylesheets/application/_carousel.css.sass
@@ -4,8 +4,12 @@
 .slider-block
   position: relative
 
+.hero-carousel
+  margin-top: 20px
+  margin-bottom: 0
+
 .carousel
-  margin: 20px 0 0 0
+  margin: 0
 
 .carousel .item
   width: 100%
@@ -29,6 +33,7 @@
   /* text colors */
 
 .caption-content
+  color: $black
   background: $white
   display: inline-block
   padding: 15px 15px 15px 15px
