remove text decoration for shopping cart

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -74,7 +74,7 @@ li.bullet-for-sale
       font-weight: normal
       font-style: normal
       display: inline-block
-      text-decoration: inherit
+      text-decoration: none
       content: "\f07a"
       position: relative
       left: -8px
@@ -86,7 +86,7 @@ li.bullet-for-sale
     font-weight: normal
     font-style: normal
     display: inline-block
-    text-decoration: inherit
+    text-decoration: none
     content: "\f07a"
     position: relative
     left: -5px
