--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -25,6 +25,20 @@ p
   .row:first-child
     margin-top: 0
 
+.footer
+  background: $black
+  color: $white
+  margin-bottom: 0
+  padding: 2em 0
+  a
+    color: lighten($brick, 10%)
+    &:hover
+      color: $brick
+  p
+    margin: 0.3em 0
+  .creative-commons
+    margin-top: 2em
+
 .hero-well
   background: whiteSmoke
   padding: 20px 0
@@ -33,6 +47,7 @@ p
 
 .hero-comments
   margin-bottom: 0
+  padding-bottom: 2em
   background: $grayLight
   color: $black
 
