--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -131,8 +131,7 @@
       = render 'layouts/header'
       = render 'layouts/title_bar'
       = yield
-      -# Footer is diabled for now until after demo
-      -#= render 'layouts/footer'
+      = render 'layouts/footer'
     -# JS
     -# ==========================================================================
 
