--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,8 +18,7 @@
 
     %meta{:charset => "utf-8"}
 
-    %title Delve
-    %meta{:name => "description", :content => ""}
+    %meta{:name => "description", :content => "Free to learn culinary school"}
     -# %meta{:name => "keywords", :content => ""}
     -# %meta{:name => "author", :content => ""}
 
