use video inplace of carousel

--- a/app/assets/stylesheets/application/_home.css.sass
+++ b/app/assets/stylesheets/application/_home.css.sass
@@ -1,4 +1,5 @@
 .hero-unit.signup-banner
+  margin-bottom: 0
   h2, h3
     line-height: 1em
   h2
@@ -6,6 +7,11 @@
   h3
     +font-sans-medium
     color: $brickLight
+  .button
+    margin-top: 8px
+  &.gray
+    h2
+      color: $brick
 
 .intro
   h1
