--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,35 +1,32 @@
 - content_for :title, "Free to Learn Culinary School"
 
-.hero-unit.hero-well.hero-carousel
-  .container.slider-block
-    #myCarousel.carousel.slide{ data: { interval: 10000 } }
-      .carousel-inner
-        .item.active
-          - carousel_images = split_images_copy(carousel_images_copy)
-          %img{src: carousel_images.first }
-        - carousel_images[1..-1].each do |image|
-          .item
-            %img{src: image }
-      %a.carousel-control.left{ href: '#myCarousel', data: { slide: 'prev' } } &lsaquo;
-      %a.carousel-control.right{ href: '#myCarousel', data: { slide: 'next' } } &rsaquo;
-    .caption.bottom-left.container
-      .caption-content
-        %h3 Master sous vide cooking
-        %h4 in our first free to learn cooking course
-        %a.button{ href: course_path(1) }
-          .inner
-            Preview Course
-            %i.icon-double-chevron-right
-
-.hero-unit.signup-banner
+.hero-unit.signup-banner.gray
   .container
     .row
       .span9
         %h2 ChefSteps is building the free to learn culinary school.
         %h3 Want to know when we launch?
       .span3
-        = render 'mailing_list/subscribe'
+        = render 'mailing_list/subscribe', orange: true
 
+.hero-unit.hero-well
+  .container
+    .row.top-video
+      .span12
+        .video-container
+          %iframe{src: youtube_url("9lWGCR0RSn4") }
+
+.hero-unit.signup-banner
+  .container
+    .row
+      .span7
+        %h3 Master sous vide cooking
+        %h4 in our first free to learn cooking course
+      .span5
+        %a.button{ href: course_path(1) }
+          .inner
+            Preview Course
+            %i.icon-double-chevron-right
 .container
   .row
     .intro.span7
