--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -19,10 +19,10 @@
 .hero-unit.signup-banner
   .container
     .row
-      .span7
+      .span6
         %h3 Master sous vide cooking
         %h4 in our first free to learn cooking course
-      .span5
+      .span3.pull-right
         %a.button{ href: course_path(1) }
           .inner
             Preview Course
