use gray font color

--- a/app/assets/stylesheets/application/_home.css.sass
+++ b/app/assets/stylesheets/application/_home.css.sass
@@ -6,7 +6,7 @@
     +font-sans-large
   h3
     +font-sans-medium
-    color: $brickLight
+    color: $grayDark
   .button
     margin-top: 8px
   &.gray
