update font color on orange banner

--- a/app/assets/stylesheets/application/_home.css.sass
+++ b/app/assets/stylesheets/application/_home.css.sass
@@ -6,10 +6,12 @@
     +font-sans-large
   h3
     +font-sans-medium
-    color: $grayDark
+    color: $brickLight
   .button
     margin-top: 8px
   &.gray
+    h3
+      color: $grayDark
     h2
       color: $brick
 
