--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,6 +1,6 @@
 - content_for :title, "Free to Learn Culinary School"
 
-.hero-unit.hero-well
+.hero-unit.hero-well.hero-home-video
   .container.signup-banner.gray
     .row
       .span7
@@ -17,8 +17,8 @@
   .container
     .row
       .span6
-        %h3 Master sous vide cooking
-        %h4 in our first free to learn cooking course
+        %h2 Master sous vide cooking
+        %h3 in our first free to learn cooking course
       .span.pull-right
         %a.button{ href: course_path(1) }
           .inner
