change "Start Course" button copy

--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -8,7 +8,7 @@
       .span4
         %a.button.pull-right{ href: activity_path(1) }
           .inner
-            Start Course
+            Preview More
             %i.icon-double-chevron-right
 
 .container
