change free-to-learn copy

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -4,7 +4,7 @@
   .container.signup-banner.gray
     .row
       .span7
-        %h2 ChefSteps is building the free to learn culinary school.
+        %h2 ChefSteps is building the free-to-learn culinary school.
         %h3 Want to know when we launch?
       .span5
         = render 'mailing_list/subscribe', orange: true
@@ -18,7 +18,7 @@
     .row
       .span6
         %h2 Master sous vide cooking
-        %h3 in our first free to learn cooking course
+        %h3 in our first free-to-learn cooking course
       .span.pull-right
         %a.button{ href: course_path(1) }
           .inner
