enable activity description

--- a/app/views/activities/_overview.html.haml
+++ b/app/views/activities/_overview.html.haml
@@ -4,8 +4,7 @@
       .span8
         %h1= raw activity.title
 
-        -# Removed for demo
-        -# %p= activity.description
+        %p= activity.description
       .span4
         -# Removed for demo
         -# .row
