update style and show global navigation

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -6,6 +6,9 @@
 @import application/sprites
 @import application/custom_mixins
 
+.navbar-inner
+  padding-right: 0
+
 p
   +font-sans-medium
   line-height: 1.6em
@@ -185,6 +188,7 @@ iframe
   +border-radius(3px)
 
 @import application/header
+@import application/global_navigation
 @import application/navigation
 @import application/carousel
 @import application/subscribe
