--- a/app/assets/stylesheets/application/_header.sass
+++ b/app/assets/stylesheets/application/_header.sass
@@ -23,8 +23,8 @@
   border: 0
 
 .navbar .nav > li > a
-  color: #333
-  padding: 10px 10px 11px
+  color: $brick
+  padding: 0
   text-shadow: none
 
 .navbar .nav > li > a:hover
@@ -46,3 +46,4 @@
     margin-left: 5px
     &.addthis_button_google_plusone
       margin-left: -3px
+
