--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -12,4 +12,5 @@
 
         .nav.pull-right.addthis-container
           = render 'layouts/share_this'
+      = render 'layouts/global_navigation'
 
