Use list and add responsive design

--- a/app/assets/stylesheets/application/_global_navigation.css.sass
+++ b/app/assets/stylesheets/application/_global_navigation.css.sass
@@ -3,12 +3,12 @@
   color: $black
   a
     color: $brick
-  [class*="span"]
+  .nav > li
     margin: 0
-    border-right: 1px dotted black
+    border-right: 1px dotted $black
     padding: 10px 30px
     text-align: center
-  [class*="span"]:last-child
-    border: none
+  .nav > li:last-child
+    border-right: none
     padding-right: 0
 
