comment out blog and forum links for now

--- a/app/views/layouts/_global_navigation.html.haml
+++ b/app/views/layouts/_global_navigation.html.haml
@@ -4,10 +4,10 @@
       Courses
     - else
       %a{ href: course_path(1) } Courses
-  %li
-    %a{href: ''} Shop
-  %li
-    %a{href: ''} Forums
+  -# %li
+  -#   %a{href: ''} Shop
+  -# %li
+  -#   %a{href: ''} Forums
   %li
     %a{href: 'http://chefstepsblog.com'} Blog
 
