--- a/app/assets/stylesheets/application/_global_navigation.css.sass
+++ b/app/assets/stylesheets/application/_global_navigation.css.sass
@@ -8,6 +8,7 @@
     border-right: 1px dotted $black
     padding: 10px 30px
     text-align: center
+    line-height: 19px
   .nav > li:last-child
     border-right: none
     padding-right: 0
