Update blog url -> blog.chefsteps.com

--- a/app/views/layouts/_global_navigation.html.haml
+++ b/app/views/layouts/_global_navigation.html.haml
@@ -9,5 +9,5 @@
   -# %li
   -#   %a{href: ''} Forums
   %li
-    %a{href: 'http://chefstepsblog.com'} Blog
+    %a{href: 'http://blog.chefsteps.com'} Blog
 
