--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -127,7 +127,16 @@
 
   .global-navigation
     .nav > li
-      width: 100%
+      width: 96%
       border-right: none
-      border-top: 1px solid $black
+      border-top: 1px solid $grayLight
+      text-align: left
+    .navbar-inner
+      width: 100%
+    .nav
+      width: 100%
+    i[class^="icon-"]
+      display: inline-block
 
+  .brand-container
+    margin-bottom: 20px !important
