--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -2,6 +2,8 @@
   .navbar
     .navbar-inner
       .container
+        .nav.pull-right.addthis-container
+          = render 'layouts/share_this'
         .nav.brand-container
           %a.brand{ href: root_path }
             = image_tag('chefsteps-logo.png', alt: 'ChefSteps')
@@ -10,9 +12,8 @@
             %a.delve-brand{href: 'http://delvekitchen.com'}
               = image_tag('delve-logo.png', alt: 'Delve')
 
-        .nav.pull-right.addthis-container
-          = render 'layouts/share_this'
-  .navbar.global-navigation.pull-right
-    .navbar-inner
+.container
+  .navbar.global-navigation
+    .navbar-inner.pull-right
       = render 'layouts/global_navigation'
 
