--- a/app/views/layouts/_global_navigation.html.haml
+++ b/app/views/layouts/_global_navigation.html.haml
@@ -6,14 +6,14 @@
       %a{ href: course_path(1) }
         Courses
         %i.icon-chevron-right.pull-right
-  %li
-    %a{href: ''}
-      Shop
-      %i.icon-chevron-right.pull-right
-  %li
-    %a{href: ''}
-      Forums
-      %i.icon-chevron-right.pull-right
+  -# %li
+  -#   %a{href: ''}
+  -#     Shop
+  -#     %i.icon-chevron-right.pull-right
+  -# %li
+  -#   %a{href: ''}
+  -#     Forums
+  -#     %i.icon-chevron-right.pull-right
   %li
     %a{href: 'http://blog.chefsteps.com'}
       Blog
