fix regression. Need to have padding for sticky

--- a/app/assets/stylesheets/application/_navigation.css.sass
+++ b/app/assets/stylesheets/application/_navigation.css.sass
@@ -13,6 +13,7 @@
     background: none
     color: $white
   .navbar .nav > li > a
+    padding: 10px
     color: $white
     &:hover
       color: $white
