Fix url in navigation_bootstrap.js

--- a/app/assets/javascripts/navigation_bootstrap.js.coffee.erb
+++ b/app/assets/javascripts/navigation_bootstrap.js.coffee.erb
@@ -1,7 +1,7 @@
 $ (target) ->
   $.ajax(
     type: "GET"
-    url: "http://<%= DOMAIN %>/global-nav-header"
+    url: "http://<%= DOMAIN %>/global-navigation"
   ).done (html) ->
     $(target).html(html)
 
