Store bootstrap function under NavigationBootstrap

--- a/app/assets/javascripts/navigation_bootstrap.js.coffee.erb
+++ b/app/assets/javascripts/navigation_bootstrap.js.coffee.erb
@@ -1,4 +1,4 @@
-$ (target) ->
+window.NavigationBootstrap = (target) ->
   $.ajax(
     type: "GET"
     url: "http://<%= DOMAIN %>/global-navigation"
