--- a/app/assets/javascripts/navigation_bootstrap.js.coffee.erb
+++ b/app/assets/javascripts/navigation_bootstrap.js.coffee.erb
@@ -23,5 +23,5 @@ class ChefSteps.NavigationBootstrap
     @getHeader()
 
   allowOrigin: (xhr) ->
-    xhr.setRequestHeader("Access-Control-Allow-Origin", "<%= DOMAIN %>")
+    xhr.setRequestHeader("Access-Control-Allow-Origin", "http://<%= DOMAIN %>")
 
