change 'Courses' to 'Course' for now

--- a/app/views/layouts/_global_navigation.html.haml
+++ b/app/views/layouts/_global_navigation.html.haml
@@ -4,7 +4,7 @@
       Courses
     - else
       %a{ href: course_path(1) }
-        Courses
+        Course
         %i.icon-chevron-right.pull-right
   -# %li
   -#   %a{href: ''}
