--- a/app/assets/javascripts/navigation_bootstrap.js.coffee.erb
+++ b/app/assets/javascripts/navigation_bootstrap.js.coffee.erb
@@ -8,6 +8,7 @@ class ChefSteps.NavigationBootstrap
   getHeader: =>
     jQuery.ajax
       url: "http://<%= DOMAIN %>/global-navigation"
+      dataType: 'html'
       type: "GET"
       success: @loadHeader
       beforeSend: @allowOrigin
