--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -128,6 +128,7 @@
 
     #main-container
       = render 'layouts/header'
+      #header-test
       = render 'layouts/title_bar'
       = yield
       = render 'layouts/footer'
@@ -136,6 +137,13 @@
 
     -# jQuery
     %script{src: "//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"}
+    %script{src: '/assets/navigation_bootstrap.js'}
+
+    :javascript
+      $(function() {
+        var bootstrap = new ChefSteps.NavigationBootstrap('#header-test');
+        bootstrap.bootstrap();
+      });
 
     -# Custom JS
     = javascript_include_tag "application"
