move sharethis into header

--- a/app/views/layouts/_share_this.html.erb
+++ b/app/views/layouts/_share_this.html.erb
@@ -1,3 +1,6 @@
+<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+<script type="text/javascript">stLight.options({publisher: "e4ecf5c2-1671-4b6b-9d04-79142e9dc408"}); </script>
+
 <span class='st_fblike_hcount' displayText='Facebook Like'></span>
 <span class='st_twitter_hcount' displayText='Tweet'></span>
 <span class='st_pinterest_hcount' displayText='Pinterest'></span>
