change layout to allow position plus responsive

--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -126,15 +126,19 @@
       padding: 0
 
   .global-navigation
-    .nav > li
-      width: 96%
+    .navbar-inner
+      padding-left: 0
+    .nav
+      width: 100%
+    ul.nav
+      margin-top: 0
+    li
+      width: 92%
       border-right: none
       border-top: 1px solid $grayLight
       text-align: left
-    .navbar-inner
-      width: 100%
-    .nav
-      width: 100%
+      padding-right: 0
+      float: none
     i[class^="icon-"]
       display: inline-block
 
