--- a/app/assets/stylesheets/application/_header.css.sass
+++ b/app/assets/stylesheets/application/_header.css.sass
@@ -2,7 +2,7 @@
   margin-bottom: 0
 
 .navbar .brand
-  padding: 25px 0 0 0
+  padding: 10px 0 0 0
 
 .brand-byline
   clear: left
@@ -43,23 +43,25 @@
 .global-navigation
   +font-serif-large
   color: $black
-
-  .nav > li
+  margin-bottom: 10px
+  ul.nav
+    margin-top: 25px
+  li
     margin: 0
     border-right: 1px dotted $black
     padding: 10px 30px
     text-align: center
     line-height: 19px
-  .nav > li:last-child
+  li:last-child
     border-right: none
     padding-right: 0
 
   i[class^="icon-"]
     display: none
 
-  .nav > li > a
+  li > a
     color: $brick
 
-  .nav > li > a:hover
+  li > a:hover
     color: $brickDark
 
