--- a/app/views/admin/recipes/_show.html.haml
+++ b/app/views/admin/recipes/_show.html.haml
@@ -15,7 +15,9 @@
             %td
               %ul
                 - recipe.ingredients.map do |ingredient|
-                  %li= link_to "#{ingredient.display_quantity} #{ingredient.title}", admin_ingredient_path(ingredient)
+                  %li
+                    = ingredient.display_quantity
+                    = link_to ingredient.title, admin_ingredient_path(ingredient.ingredient_id)
           %tr
             %th Steps
             %td
