--- a/app/views/admin/recipes/_form.html.haml
+++ b/app/views/admin/recipes/_form.html.haml
@@ -4,9 +4,21 @@
     = f.input :yield
     = f.input :activity
   = f.inputs name: "Ingredients" do
-    = f.semantic_fields_for :ingredient do |ingredient_form|
-      = ingredient_form.input :unit
-      = ingredient_form.input :quantity
-      = ingredient_form.input :ingredient, as: :select, collection: Ingredient.all
+    %li= button_tag 'Add'
+    %table
+      %tr
+        %th Ingredient
+        %th Quantity
+        %th Unit
+      %tr
+        %td= text_field_tag 'recipe[ingredients][][title]'
+        %td= text_field_tag 'recipe[ingredients][][quantity]'
+        %td= text_field_tag 'recipe[ingredients][][unit]'
+      - @recipe.ingredients.each do |ingredient|
+        %tr
+          %td= text_field_tag 'recipe[ingredients][][title]', ingredient.title
+          %td= text_field_tag 'recipe[ingredients][][quantity]', ingredient.quantity
+          %td= text_field_tag 'recipe[ingredients][][unit]', ingredient.unit
+
   = f.actions
 
