dynamically add ingredients to recipe creation

--- a/app/views/admin/recipes/_form.html.haml
+++ b/app/views/admin/recipes/_form.html.haml
@@ -4,13 +4,13 @@
     = f.input :yield
     = f.input :activity
   = f.inputs name: "Ingredients" do
-    %li= button_tag 'Add'
-    %table
+    %li= button_tag 'Add', {data: {behavior: 'copy-element', 'copy-target' => '#ingredient-row', 'copy-destination' => 'table#ingredients'}}
+    %table#ingredients
       %tr
         %th Ingredient
         %th Quantity
         %th Unit
-      %tr
+      %tr#ingredient-row
         %td= text_field_tag 'recipe[ingredients][][title]'
         %td= text_field_tag 'recipe[ingredients][][quantity]'
         %td= text_field_tag 'recipe[ingredients][][unit]'
@@ -21,4 +21,6 @@
           %td= text_field_tag 'recipe[ingredients][][unit]', ingredient.unit
 
   = f.actions
+
+= javascript_include_tag "admin"
 
