--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -138,4 +138,5 @@
     -# Custom JS
     = javascript_include_tag "application"
     = render 'layouts/google_analytics' if Rails.env.production?
+    = content_for(:footer_script)
 
