--- a/app/views/layouts/_global_navigation.html.haml
+++ b/app/views/layouts/_global_navigation.html.haml
@@ -1,8 +1,8 @@
 %li
-  - if current_page?(course_path(1))
+  - if current_page?(course_url(1))
     Course
   - else
-    %a{ href: course_path(1) }
+    %a{ href: course_url(1) }
       Course
       %i.icon-chevron-right.pull-right
 -# %li
